# mAIcroscopysandbox

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  README.md  USAGE.md  makefile  pyproject.toml  setup.cfg  t.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
notebooks/: example_from_binary.ipynb  example_usage.ipynb  stack.avi
scripts/: release_to_pypi.sh  run_ci_locally.sh
src/maicroscopy_sandbox/: __init__.py  fluorescence_sim.py  maicroscopy_sandbox.py  smartSRRF.py
src/maicroscopy_sandbox/samples/: binary.py  ellipsoid.py  sample.py  staph.py
src/microscopai_sandbox/: __init__.py  fluorescence_sim.py  microscopai_sandbox.py
src/microscopai_sandbox/samples/: ellipsoid.py
tests/: __init__.py  test_maicroscopy_sandbox.py  test_microscopai_sandbox.py
