[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maicroscopy_sandbox"
version = "0.3.0"
description = "Fluorescence microscopy simulation toolkit for synthetic microscopy experiments."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Bruno Saraiva", email = "bruno.msaraiva2@gmail.com" },
]
keywords = ["microscopy", "simulation", "fluorescence", "bioimaging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numba",
  "numpy<2",
  "scikit-image",
  "scipy",
  "tifffile",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "ipykernel>=6.29.4",
  "pdoc>=12.3.1",
  "pre-commit>=3.7.0",
  "ruff>=0.4.3",
  "twine>=5.1.1",
]
test = [
  "coverage[toml]>=7.6.1",
  "pytest>=8",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.1",
]

[project.urls]
Homepage = "https://github.com/HenriquesLab/mAIcroscopysandbox"
Repository = "https://github.com/HenriquesLab/mAIcroscopysandbox"
Issues = "https://github.com/HenriquesLab/mAIcroscopysandbox/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-q",
  "-p",
  "pytest_cov",
  "--cov=maicroscopy_sandbox",
  "--cov-report=term-missing",
  "--cov-report=xml",
]

[tool.coverage.run]
branch = true
source = ["maicroscopy_sandbox"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
omit = [
  "tests/*",
]
