[metadata]
name = microscopai_sandbox
version = 0.1.0
description = ""
author = Bruno Saraiva
author_email = bruno.msaraiva2@gmail.com, 
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
license = MIT
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    numpy

[options.package_data]
* =
  *.yaml

[options.extras_require]
dev =
    pre-commit>=3.7.0
    ipykernel>=6.29.4
    ruff>=0.4.3
    gptrepo>=1.0.3
    pdoc>=12.3.1
    build
test =
    pytest>=7
    pytest-xdist>=3.6.1
    pytest-cov>=5.0.0
    nbmake>=1.5.3
    mypy>=1.10.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    download-structures = supramolsim.download:download_suggested_structures